Removes logs and add validation into openApi.yaml
